--- a/assignments/Assignment_1.Rmd
+++ b/assignments/Assignment_1.Rmd
@@ -1,8 +1,8 @@
 ---
 title: "Assignment 1"
 output:
-  pdf_document: default
   html_document: default
+  pdf_document: default
 ---
 
 -----
@@ -20,6 +20,9 @@ Please bring questions that you cannot work out on your own to tutorial. We will
 If you like, you may collaborate with others in the class. If you choose to do so, please indicate with whom you have worked at the top of your PDF. Separate submissions are required.
 
 Any questions can be addressed to Navona ([navona.calarco@mail.utoronto.ca]()) and/or Julia ([julia.gallucci@mail.utoronto.ca]()) before the due-date. Please email your submissions to Julia, with the subject `DSI: Assignment 1, Name`.
+
+<mark><u>__UPDATE: 
+You are only required to submit questions 1-3, as we have not gone over the content for question 4. Question 4 will be moved to the next assignment.__<mark></u>
 
 -----
 
@@ -166,6 +169,9 @@ _(xiii)_ Fit a second KNN model, with k=3. Does this model perform better (i.e.,
 
 __Question 4:__  
 __Resampling via Bootstrapping__
+
+<mark><u>__PLEASE NOTE: 
+You are only required to submit questions 1-3, as we have not gone over the content for question 4. Question 4 will be moved to the next assignment.__<mark></u> 
 
 Let's use the `iris` dataset. As always, start by reviewing a description of the dataset, by typing `?iris` in the console. This dataset contains various physical measurements of several species of iris flowers.
 ```{r}
