--- a/lessons/quarto slides/6.1/6.1 _intro.qmd
+++ b/lessons/quarto slides/6.1/6.1 _intro.qmd
@@ -7,7 +7,7 @@ format:
     theme: Madrid
     colortheme: DarkBlue
     institute: The University of Toronto
-    toc: true
+    # toc: true
     # Table of contents not generating at the moment
 editor: visual
 header-includes: 
