--- a/lessons/quarto slides/6.2/6.2_slides.qmd
+++ b/lessons/quarto slides/6.2/6.2_slides.qmd
@@ -162,17 +162,17 @@ $$ where $\mathrm{TSS}=\sum\left(y_{i}-\bar{y}\right)^{2}$ is the **total sum of
 
 Simple linear regression uses a single predictor variable $X$ to predict a response $Y$ with $$
 Y \approx \beta_{0}+\beta_{1} X
-$$ 
+$$
 
-- $\beta_{0}, \beta_{1}$ are estimated by minimizing the residual sum of squares (RSS)
+-   $\beta_{0}, \beta_{1}$ are estimated by minimizing the residual sum of squares (RSS)
 
-- The standard error (SE) of the coefficient estimates is a measure of accuracy. 
+-   The standard error (SE) of the coefficient estimates is a measure of accuracy.
 
-- The residual standard error (RSE) gives a measure of lack of fit of the model to the data. 
+-   The residual standard error (RSE) gives a measure of lack of fit of the model to the data.
 
-- The $R^2$ statistic measures the proportion of variability explained by the regression. - A hypothesis test on $\beta_1$ indicates whether there is a relationship between $X$ and $Y$. 
+-   The $R^2$ statistic measures the proportion of variability explained by the regression. - A hypothesis test on $\beta_1$ indicates whether there is a relationship between $X$ and $Y$.
 
-- The `lm()` function in R can be used to perform all of these tasks!
+-   The `lm()` function in R can be used to perform all of these tasks!
 
 **Any Questions?**
 
@@ -227,13 +227,13 @@ The figure shows the relationship between two predictor variables and a response
 
 # Important Questions
 
-When working with multiple linear regression, we are often interested in several important questions. 
+When working with multiple linear regression, we are often interested in several important questions.
 
-- Is there a relationship between the response and the predictors?
+-   Is there a relationship between the response and the predictors?
 
-- How well does the model fit the data?
+-   How well does the model fit the data?
 
-- Given a set of predictor values, what is the predicted response, and how accurate is our prediction? We will go over the methods for answering each of these questions.
+-   Given a set of predictor values, what is the predicted response, and how accurate is our prediction? We will go over the methods for answering each of these questions.
 
 ------------------------------------------------------------------------
 
@@ -259,8 +259,7 @@ Two: *How well does the model fit the data?*
 
 The $\operatorname{RSE}$ and $R^2$ are measures of the model fit. In the multiple linear regression context, $R^2$ is the square of the correlation between the response and the fitted linear model. That is, $R^2 = \operatorname{Cor}(Y, \hat Y)^2$.
 
-The $\operatorname{RSE}$ is defined by 
-$$
+The $\operatorname{RSE}$ is defined by $$
 \mathrm{RSE}=\sqrt{\frac{\mathrm{RSS}}{n-p-1} } \hspace{1cm} \text{where } n = \text{\# observations},\ p = \text{\# predictors}
 $$
 
@@ -295,3 +294,306 @@ We can address how much $Y$ will vary from $\hat Y$ using prediction intervals.
 Open the Linear Regression Exercises R Markdown file.
 
 -   Go over the "Multiple Linear Regression" section together as a class.
+
+------------------------------------------------------------------------
+
+# Qualitative Predictors
+
+So far we have only looked at using quantitative predictor variables for linear regression. However, sometimes the inclusion of qualitative variables is desirable.
+
+Suppose we have the following information about a set of people:
+
+-   $Y$: income (quantitative: \$ amount)
+
+-   $X_1$: student status (qualitative: is a student or is not)
+
+-   $X_2$: location of residence (qualitative: Toronto, Vancouver, Montreal)
+
+We want to determine whether there is a relationship between income and the other two qualitative variables.
+
+------------------------------------------------------------------------
+
+# Qualitative Predictors: Two Levels
+
+Let's start by looking at the differences in income between students and non-students. Our qualitative predictor, or *factor*, has two levels so we can incorporate into a regression model using a **dummy variable** that takes on two possible numerical values.
+
+$$
+x_{i}=\left\{\begin{array}{ll}
+1 & \text { if } i \text{th person is a student } \\
+0 & \text { if } i \text{th person is not a student }
+\end{array}\right. 
+$$
+
+So we have the following model
+
+$$
+y_{i}=\beta_{0}+\beta_{1} x_{i}+\epsilon_{i}=\left\{\begin{array}{ll}
+\beta_{0}+\beta_{1}+\epsilon_{i} & \text { if } i \text{th person is a student } \\
+\beta_{0}+\epsilon_{i} & \text { if } i \text{th person is not a student }
+\end{array}\right.
+$$
+
+-   $\beta_0$ is the average income for non-students.
+
+-   $\beta_0 + \beta_1$ is the average income for students.
+
+The method for fitting linear models with qualitative predictors using dummy variables remains the same.
+
+------------------------------------------------------------------------
+
+# Qualitative Predictors: Multiple Level
+
+Now let's look at the difference in income between the residents of Toronto, Vancouver, and Montreal. We can do this using two dummy variables.
+
+$$
+\begin{aligned}
+x_{i 1}&=\left\{\begin{array}{ll}
+1 & \text { if } i \text {th person is from Vancouver } \\
+0 & \text { if } i \text {th person is not from Vancouver }
+\end{array}\right.
+\\
+x_{i 2}&=\left\{\begin{array}{ll}
+1 & \text { if } i \text {th person is from Montreal } \\
+0 & \text { if } i \text {th person is not Montreal }
+\end{array}\right.
+\end{aligned}
+$$
+
+The level with no dummy variable is known as the **baseline** (Toronto in this example). Our model is now $$
+y_{i}=\beta_{0}+\beta_{1} x_{i 1}+\beta_{2} x_{i 2}+\epsilon_{i}=\left\{\begin{array}{ll}
+\beta_{0}+\beta_{1}+\epsilon_{i} & \text { if } i \text{th person is from Vancouver } \\
+\beta_{0}+\beta_{2}+\epsilon_{i} & \text { if } i \text{th person is from Montreal } \\
+\beta_{0}+\epsilon_{i} & \text { if } i \text{th person is from Toronto. }
+\end{array}\right.
+$$
+
+------------------------------------------------------------------------
+
+# Qualitative Predictors: Multiple Levels
+
+$$
+y_{i}=\beta_{0}+\beta_{1} x_{i 1}+\beta_{2} x_{i 2}+\epsilon_{i}=\left\{\begin{array}{ll}
+\beta_{0}+\beta_{1}+\epsilon_{i} & \text { if } i \text{th person is from Vancouver } \\
+\beta_{0}+\beta_{2}+\epsilon_{i} & \text { if } i \text{th person is from Montreal } \\
+\beta_{0}+\epsilon_{i} & \text { if } i \text{th person is from Toronto. }
+\end{array}\right.
+$$
+
+The coefficients can be interpreted as
+
+-   $\beta_0$ the average income for people from Toronto
+
+-   $\beta_1$ the difference in the average income between people from Vancouver versus Toronto
+
+-   $\beta_2$ the difference in the average income between people from Montreal versus Toronto.
+
+1.  The choice of 0 and 1 as values for the dummy variable or the choice of the baseline category are arbitrary and will not change the results of the regression
+2.  These choices will impact the interpretation of the coefficients and their $p$-values.
+3.  Use an F-test to test $H_0$ : $\beta_1 = \beta_2 = 0$.
+
+------------------------------------------------------------------------
+
+# Exercises: Qualitative Predictors
+
+Open the Linear Regression Exercises R Markdown file.
+
+-   Go over the "Qualitative Predictors" section together as a class.
+
+------------------------------------------------------------------------
+
+# Extensions of the Linear Model
+
+Two of the most important and restrictive assumptions for linear regression models are
+
+-   The relationship between the predictors and the response is \alert{additive}.
+    -   $\Rightarrow$ *The association between a predictor and the response does not depend on any of the other predictors.*
+-   The relationship between the predictors and the response is \alert{linear}.
+    -   $\Rightarrow$ *A one-unit change in a predictor induces a constant change in the response regardless of the value of the predictor.*
+
+We will examine the relaxation of the additive assumption but modifications to the linear assumption will be left until section 6.6.
+
+------------------------------------------------------------------------
+
+# Removing the Additive Assumption
+
+Consider the following linear regression model with two predictors $$
+Y=\beta_{0}+\beta_{1} X_{1}+\beta_{2} X_{2}+\epsilon
+$$ We can include the product of $X_1$ and $X_2$ as a third predictor called the **interaction term**. $$Y=\beta_{0}+\beta_{1} X_{1}+\beta_{2} X_{2}+\alert{\beta_{3} X_{1} X_{2}}+\epsilon$$ This means that a change in the value of $X_2$ will change the association between $X_1$ and $Y$.
+
+We can look at the $p$-value for $H_0: \beta_3 = 0$ to determine whether the interaction term is justified.
+
+The **hierarchical principal**: when including an interaction in a model, the main effects should also be included even if the $p$-values for these coefficients are not significant.
+
+------------------------------------------------------------------------
+
+# Exercises: Interaction Term
+
+Open the Linear Regression Exercises R Markdown file.
+
+-   Go over the "Interaction Term" section together as a class.
+
+------------------------------------------------------------------------
+
+# Potential Problems
+
+There are quite a few problems that can arise when fitting a linear regression model to a data set.
+
+-   Non-linear response-predictor relationship
+
+-   Correlation of error terms
+
+-   Non-constant variance of error terms
+
+-   Outliers
+
+-   High-leverage points
+
+We will briefly explain how to identify these problems but we will wait to provide solutions until later sections within this module.
+
+------------------------------------------------------------------------
+
+# Non-Linearity
+
+Linear regression assumes a linear relationship between the predictors and the response. If this assumption is invalid then conclusions derived from the model are flawed.
+
+Identification:
+
+-   Plot the residuals $e_i = y_i - \hat y_i$ versus the predictor $x_i$ (or versus $y_i$ in the case of multiple regression)
+
+-   There should be no discernible pattern in the residuals, otherwise this may indicate non-linearity.
+
+------------------------------------------------------------------------
+
+# Non-Linearity
+
+Plot of the residuals versus the predicted values for a linear regression fit to a dataset.
+
+![](images/residuals-01.png){fig-align="center" width="214"}
+
+There is a clear trend in the residuals illustrated by the red curve which could indicate patterns in the data that are not captured by the linear model.
+
+------------------------------------------------------------------------
+
+# Correlation of Errors
+
+Linear regression assumes that the error terms $\epsilon_{1}, \epsilon_{2}, \ldots, \epsilon_{n}$ are uncorrelated (i.e. the value of $\epsilon_{i}$ is unrelated to the value for $\epsilon_{i+1}$). If this is violated, the estimated standard errors are much smaller than the truth, leading to unwarranted confidence in the model.
+
+Examples
+
+-   correlation between consecutive observations in time series data.
+
+-   observations are related in some other way (ex: individuals are members of the same family or have been exposed to the same environmental factors).
+
+Identification for time series:
+
+-   Plot residuals versus time.
+
+-   Look for temporal patterns that could indicated correlation of error terms.
+
+------------------------------------------------------------------------
+
+# Correlation of Errors
+
+Both plots show the residuals from a linear regression fit to time series data versus time. The top plot shows no correlation between the residuals whereas the bottom plot clearly has a time dependent structure.
+
+![](images/uncorrelated_error.png){fig-align="center" width="448"}
+
+![](images/correlated_error.png){fig-align="center" width="448"}
+
+------------------------------------------------------------------------
+
+# Non-Constant Variance of Errors
+
+Linear regression also assumes constant variance of the error terms, $\operatorname{Var}(\epsilon_i) = \sigma^2$. If this assumption is invalid, the standard errors, confidence intervals, and hypothesis tests for the linear model are undermined.
+
+Identification:
+
+1.  Plot the residuals versus the response.
+
+2.  Look for a funnel shape in the plot (this indicates an increase or decrease in the variance of the errors as a function of the response)
+
+------------------------------------------------------------------------
+
+# Non-Constant Variance of Errors
+
+Plot for the residuals versus the fitted values of a linear regression model.
+
+![](images/variance_errors.png){fig-align="center" width="212"}
+
+The residuals show a clear funnel shape with increasing response values resulting in increasing variance of the error terms.
+
+------------------------------------------------------------------------
+
+# Outliers
+
+**Outliers** are data points that have unusual values for $y_i$ given an unremarkable $x_i$. That is, $y_i$ is far from the value predicted by the model for $x_i$. Outliers can occur as a result of an error in data collection or a variety of other reasons.
+
+Outliers often have little effect on the parameter fitting, but they can alter the $RSE$ and $R^2$ which can impact the interpretation of the fit.
+
+Identification:
+
+1.  Plot the **studentized residuals** which are computed by dividing the residuals $e_i$ by the estimated standard error.
+
+2.  Observations with studentized residuals greater than 3 or less than -3 are probably outliers.
+
+------------------------------------------------------------------------
+
+# Outliers
+
+Plot of the studentized residuals versus the response values.
+
+![](images/studentized_re.png){fig-align="center" width="225"}
+
+The red point at the top of the plot is above 3 which indicates it is an outlier.
+
+------------------------------------------------------------------------
+
+# High Leverage Points
+
+**High leverage points** are observations that have an unusual predictor value. These points tend to impact the fitted regression quite a bit and are therefore very important to identify.
+
+Identification:
+
+-   In simple linear regression, look for observations with a predictor value that is far outside the range of the rest.
+
+-   In multiple regression, we are looking for an unusual combination of predictors which can be harder to identify
+
+    -   Compute the leverage statistic for each observation.
+
+    -   If the leverage statistic is much greater than $(p+1)n$, the observation may have high leverage.
+
+------------------------------------------------------------------------
+
+# High Leverage Points
+
+The left plot shows the response versus the predictors for a simple linear regression. The right plot show the studentized residuals versus the leverage.
+
+::: columns
+::: {.column width="50%"}
+![](images/simple_leverage.png){fig-align="center" width="127"}
+:::
+
+::: {.column width="50%"}
+![](images/multiple_leverage.png){fig-align="center" width="127"}
+:::
+:::
+
+Observation 41 in the left plot has a very large predictor value which indicates it is a high leverage point. This is confirmed in the right plot by the leverage index. The right plot also indicates 41 has a larger studentized residual (as does observation 20) so 41 is an outlier and a high leverage point.
+
+------------------------------------------------------------------------
+
+# Exercises
+
+Open the Linear Regression Exercises R Markdown file.
+
+-   Go over the "Helpful Plots" section together as a class.
+
+-   Complete the exercises at the end of the file.
+
+------------------------------------------------------------------------
+
+# References
+
+Chapter 3 of the ISLR2 book:
+
+James, Gareth, et al. "Linear Regression." An Introduction to Statistical Learning: with Applications in R, 2nd ed., Springer, 2021.
