--- a/lessons/quarto slides/6.2/6.2-linear-regression.qmd
+++ b/lessons/quarto slides/6.2/6.2-linear-regression.qmd
@@ -15,7 +15,7 @@ header-includes:
 - \setbeamercolor{structure}{fg=DarkBlue}
 ---
 
-# Motivation
+# Motivation (R)
 
 Throughout this Module we will be making use of the `Boston` dataset in the R package `ISLR2`. We can install the package in R and add it to our library:
 
@@ -28,7 +28,27 @@ The `Boston` dataset contains housing values in 506 Boston suburbs along with 12
 
 -   `rm`: average number of rooms per dwelling
 -   `nox`: nitrogen oxides concentration (parts per 10 million)
--   `lstat`: percent of households with low socioeconomics status
+-   `lstat`: percent of households with low socioeconomic status
+
+We can take `medv`, the median value of owner-occupied homes in \$1000s, to be the response variable $Y$ and the 12 other variables to be the predictors $X = (X_1, \dots, X_{12})$.
+
+------------------------------------------------------------------------
+
+# Motivation (Python)
+
+Throughout this Module we will be making use of the `Boston` dataset in the Python package `ISLP`. We can use the terminal to install the Python package and use the `load_data` function from the `ISLP` package to load the `Boston` dataset:
+
+```         
+pip install ISLP
+from ISLP import load_data
+Boston = load_data("Boston")
+```
+
+The `Boston` dataset contains housing values in 506 Boston suburbs along with 12 other variables associated with the suburbs. To name a few,
+
+-   `rm`: average number of rooms per dwelling
+-   `nox`: nitrogen oxides concentration (parts per 10 million)
+-   `lstat`: percent of households with low socioeconomic status
 
 We can take `medv`, the median value of owner-occupied homes in \$1000s, to be the response variable $Y$ and the 12 other variables to be the predictors $X = (X_1, \dots, X_{12})$.
 
@@ -180,7 +200,7 @@ $$
 
 # Exercises: Simple Linear Regression
 
-Open the Linear Regression Exercises R Markdown file.
+Open the Linear Regression Exercises R Markdown or Jupyter Notebook file.
 
 -   Go over the "Simple Linear Regression" section together as a class.
 
@@ -291,7 +311,7 @@ We can address how much $Y$ will vary from $\hat Y$ using prediction intervals.
 
 # Exercises: Multiple Linear Regression
 
-Open the Linear Regression Exercises R Markdown file.
+Open the Linear Regression Exercises R Markdown or Jupyter Notebook file.
 
 -   Go over the "Multiple Linear Regression" section together as a class.
 
@@ -315,15 +335,12 @@ We want to determine whether there is a relationship between income and the othe
 
 # Qualitative Predictors: Two Levels
 
-Let's start by looking at the differences in income between students and non-students. Our qualitative predictor, or *factor*, has two levels so we can incorporate into a regression model using a **dummy variable** that takes on two possible numerical values.
-$$
+Let's start by looking at the differences in income between students and non-students. Our qualitative predictor, or *factor*, has two levels so we can incorporate into a regression model using a **dummy variable** that takes on two possible numerical values. $$
 x_{i}=\left\{\begin{array}{ll}
 1 & \text { if } i \text{th person is a student } \\
 0 & \text { if } i \text{th person is not a student }
 \end{array}\right. 
-$$
-So we have the following model
-$$
+$$ So we have the following model $$
 y_{i}=\beta_{0}+\beta_{1} x_{i}+\epsilon_{i}=\left\{\begin{array}{ll}
 \beta_{0}+\beta_{1}+\epsilon_{i} & \text { if } i \text{th person is a student } \\
 \beta_{0}+\epsilon_{i} & \text { if } i \text{th person is not a student }
@@ -392,7 +409,7 @@ The coefficients can be interpreted as
 
 # Exercises: Qualitative Predictors
 
-Open the Linear Regression Exercises R Markdown file.
+Open the Linear Regression Exercises R Markdown or Jupyter Notebook file.
 
 -   Go over the "Qualitative Predictors" section together as a class.
 
@@ -425,7 +442,7 @@ The **hierarchical principal**: when including an interaction in a model, the ma
 
 # Exercises: Interaction Term
 
-Open the Linear Regression Exercises R Markdown file.
+Open the Linear Regression Exercises R Markdown or or Jupyter Notebook file.
 
 -   Go over the "Interaction Term" section together as a class.
 
@@ -581,7 +598,7 @@ Observation 41 in the left plot has a very large predictor value which indicates
 
 # Exercises
 
-Open the Linear Regression Exercises R Markdown file.
+Open the Linear Regression Exercises R Markdown or or Jupyter Notebook file.
 
 -   Go over the "Helpful Plots" section together as a class.
 
@@ -591,6 +608,8 @@ Open the Linear Regression Exercises R Markdown file.
 
 # References
 
-Chapter 3 of the ISLR2 book:
+Chapter 3 of the ISLR2 and ISLP books:
 
 James, Gareth, et al. "Linear Regression." An Introduction to Statistical Learning: with Applications in R, 2nd ed., Springer, 2021.
+
+James, Gareth, et al. "Linear Regression." An Introduction to Statistical Learning: with Applications in Python, Springer, 2023.
